--- a/azurecoremvc/Views/Home/Index.cshtml
+++ b/azurecoremvc/Views/Home/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model List<azurecoremvc.employee>
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "GitHUb Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Welcome GitHub App</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     @foreach (var item in Model)
     {
