--- a/azurecoremvc/Views/Home/Index.cshtml
+++ b/azurecoremvc/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome GitHub App</h1>
+    <h1 class="display-4">Welcome GitHub App!Sanjay</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     @foreach (var item in Model)
     {
